added about me and works

--- a/index.html
+++ b/index.html
@@ -12,10 +12,64 @@
     <body>
         <header>
             <h1>Alan Rabideau</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#work">Works</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact Me</a>
+                    </li>
+                    <li>
+                        <a href="#">Resume</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
-        <footer>
+        <section id="about" class="about">
+            <div>
+                <h2>About Me</h2>
+                <!-- <div class="about-image">
+                    <img src="./assets/images/18_10_10 square email.png" alt="Photo of Alan Rabideau in suit outdoors.">
+                </div> -->
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, autem odit? Assumenda aperiam quisquam esse doloremque obcaecati. Et, quaerat. Quod, deserunt repellat. Amet sequi a totam aliquam porro doloremque veritatis!</p>
+            </div>
+        </section>
 
+        <section id="work" class="work">
+            <div>
+                <h2>Works</h2>
+            </div>
+            <div class="main_div">
+                <div>
+                    <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
+                </div>
+                <div>
+                    <a href="#" target="_blank"><img src="./assets/images/hidden_eu_small.png" alt="Clickable image of hiddeneurope.eu website"></a>
+                </div>
+                <div>
+                    <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
+                </div>
+                <div >
+                    <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="contact">
+            <a href="" class="phone">614.579.0977</a>
+            <a href="mailto:alan@akme.us" class="email">alan@akme.us</a>
+            <a href="https://github.com/sakme" target="_blank" class="github">GitHub</a>
+            <a href="https://www.linkedin.com/in/alan-rabideau-4539255" target="_blank" class="linkedin">LinkedIn</a>
+        </section>
+
+        <footer>
+            <h2>Created by Alan Rabideau</h2>
+            <p>Columbus, Ohio</p>
         </footer>
         
     </body>
