added image overlays

--- a/index.html
+++ b/index.html
@@ -45,17 +45,33 @@
                 <h2>Works</h2>
             </div>
             <div class="main_div">
-                <div>
+                <div class="runbuddy_container">
                     <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
+                    <div class="runbuddy_bottom">
+                        RunBuddy<br />
+                        Fitness Company Website
+                    </div>
                 </div>
-                <div>
+                <div class="hidden_container">
                     <a href="#" target="_blank"><img src="./assets/images/hidden_eu_small.png" alt="Clickable image of hiddeneurope.eu website"></a>
+                    <div class="hidden_bottom">
+                        HiddenEurope.eu <br/>
+                        Travel & Lifestyle Blog
+                    </div>
                 </div>
-                <div>
+                <div class="kashmir_container">
                     <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
+                    <div class="kashmir_bottom">
+                        KashmirStyle.in <br/>
+                        Fashion eCommerce Website
+                    </div>
                 </div>
-                <div >
+                <div class="gourmand_container">
                     <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
+                    <div class="gourmand_bottom">
+                        Gourma.nd <br/>
+                        Ready-To-Cook Gourmet Meals Website
+                    </div>
                 </div>
             </div>
         </section>
