streamlined css for work section

--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
                 <h2>Works</h2>
             </div>
             <div class="main_div">
-                <div class="runbuddy_container">
+                <div class="runbuddy_container container">
                     <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
-                    <div class="runbuddy_bottom">
+                    <div class="runbuddy_bottom bottom">
                         RunBuddy<br />
                         Fitness Company Website
                     </div>
                 </div>
-                <div class="hidden_container">
+                <div class="hidden_container container">
                     <a href="#" target="_blank"><img src="./assets/images/hidden_eu_small.png" alt="Clickable image of hiddeneurope.eu website"></a>
-                    <div class="hidden_bottom">
+                    <div class="hidden_bottom bottom">
                         HiddenEurope.eu <br/>
                         Travel & Lifestyle Blog
                     </div>
                 </div>
-                <div class="kashmir_container">
+                <div class="kashmir_container container">
                     <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
-                    <div class="kashmir_bottom">
+                    <div class="kashmir_bottom bottom">
                         KashmirStyle.in <br/>
                         Fashion eCommerce Website
                     </div>
                 </div>
-                <div class="gourmand_container">
+                <div class="gourmand_container container">
                     <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
-                    <div class="gourmand_bottom">
+                    <div class="gourmand_bottom bottom">
                         Gourma.nd <br/>
                         Ready-To-Cook Gourmet Meals Website
                     </div>
