styled contact section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <section id="about" class="about">
             <div>
                 <h2>About Me</h2>
+            </div>
+            <div>
                 <!-- <div class="about-image">
                     <img src="./assets/images/18_10_10 square email.png" alt="Photo of Alan Rabideau in suit outdoors.">
                 </div> -->
@@ -77,10 +79,21 @@
         </section>
 
         <section id="contact" class="contact">
-            <a href="" class="phone">614.579.0977</a>
-            <a href="mailto:alan@akme.us" class="email">alan@akme.us</a>
-            <a href="https://github.com/sakme" target="_blank" class="github">GitHub</a>
-            <a href="https://www.linkedin.com/in/alan-rabideau-4539255" target="_blank" class="linkedin">LinkedIn</a>
+            <h2>Contact Me</h2>
+            <div class="contacts">
+                <div>
+                    <a href="" class="phone">614.579.0977</a>
+                </div>
+                <div>
+                    <a href="mailto:alan@akme.us" class="email">alan@akme.us</a>
+                </div>
+                <div>
+                    <a href="https://github.com/sakme" target="_blank" class="github">GitHub</a>
+                </div>
+                <div>
+                    <a href="https://www.linkedin.com/in/alan-rabideau-4539255" target="_blank" class="linkedin">LinkedIn</a>
+                </div>
+            </div>
         </section>
 
         <footer>
