--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="#contact">Contact Me</a>
                     </li>
                     <li>
-                        <a href="#">Resume</a>
+                        <a href="./resume.html" target="_blank">Resume</a>
                     </li>
                 </ul>
             </nav>
