--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
             <div class="main_div">
                 <div class="container">
                     <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
-                    <div class="runbuddy_bottom bottom">
+                    <div class="bottom">
                         RunBuddy<br />
                         Fitness Company Website
                     </div>
                 </div>
                 <div class="container">
                     <a href="#" target="_blank"><img src="./assets/images/hidden_eu_small.png" alt="Clickable image of hiddeneurope.eu website"></a>
-                    <div class="hidden_bottom bottom">
+                    <div class="bottom">
                         HiddenEurope.eu <br/>
                         Travel & Lifestyle Blog
                     </div>
                 </div>
                 <div class="container">
                     <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
-                    <div class="kashmir_bottom bottom">
+                    <div class="bottom">
                         KashmirStyle.in <br/>
                         Fashion eCommerce Website
                     </div>
                 </div>
                 <div class="container">
                     <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
-                    <div class="gourmand_bottom bottom">
+                    <div class="bottom">
                         Gourma.nd <br/>
                         Ready-To-Cook Gourmet Meals Website
                     </div>
