--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2>Works</h2>
             </div>
             <div class="main_div">
-                <div class="container start">
+                <div class="container">
                     <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
                     <div class="bottom">
                         RunBuddy<br />
