reworked about section styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <!-- begin header -->
         <header>
             <h1>Alan Rabideau</h1>
             <nav>
@@ -29,26 +30,32 @@
                 </ul>
             </nav>
         </header>
+        <!-- end header -->
 
+        <!-- begin about section -->
         <section id="about" class="about">
             <div>
                 <h2>About Me</h2>
             </div>
-            <div>
-                <!-- <div class="about-image">
-                    <img src="./assets/images/18_10_10 square email.png" alt="Photo of Alan Rabideau in suit outdoors.">
-                </div> -->
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, autem odit? Assumenda aperiam quisquam esse doloremque obcaecati. Et, quaerat. Quod, deserunt repellat. Amet sequi a totam aliquam porro doloremque veritatis!</p>
+            <div class="about-image">
+                <div>
+                    <img src="./assets/images/headshot.png" alt="Photo of Alan Rabideau in suit outdoors.">
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, autem odit? Assumenda aperiam quisquam esse doloremque obcaecati. Et, quaerat. Quod, deserunt repellat. Amet sequi a totam aliquam porro doloremque veritatis!</p>
+                </div>
             </div>
         </section>
+        <!-- end about section -->
 
+        <!-- begin work section -->
         <section id="work" class="work">
             <div>
                 <h2>Works</h2>
             </div>
             <div class="main_div">
-                <div class="container">
-                    <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
+                <div class="container feature">
+                    <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddybig.png" alt="Clickable image of RunBuddy website."></a>
                     <div class="bottom">
                         RunBuddy<br />
                         Fitness Company Website
@@ -77,7 +84,9 @@
                 </div>
             </div>
         </section>
+        <!-- end work section -->
 
+        <!-- begin contact section -->
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
             <div class="contacts">
@@ -95,11 +104,14 @@
                 </div>
             </div>
         </section>
+        <!-- end contact section -->
 
+        <!-- begin footer -->
         <footer>
             <h2>Created by Alan Rabideau</h2>
             <p>Columbus, Ohio</p>
         </footer>
+        <!-- end footer -->
         
     </body>
 
