--- a/index.html
+++ b/index.html
@@ -53,33 +53,35 @@
             <div>
                 <h2>Works</h2>
             </div>
-            <div class="main_div">
-                <div class="container feature">
+            <div>
+                <div class="feature_div feature_container">
                     <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddybig.png" alt="Clickable image of RunBuddy website."></a>
-                    <div class="bottom">
+                    <div class="feature_bottom">
                         RunBuddy<br />
                         Fitness Company Website
                     </div>
                 </div>
-                <div class="container">
-                    <a href="#" target="_blank"><img src="./assets/images/hidden_eu_small.png" alt="Clickable image of hiddeneurope.eu website"></a>
-                    <div class="bottom">
-                        HiddenEurope.eu <br/>
-                        Travel & Lifestyle Blog
+                <div class="main_div">
+                    <div class="container">
+                        <a href="#" target="_blank"><img src="./assets/images/hidden_eu_small.png" alt="Clickable image of hiddeneurope.eu website"></a>
+                        <div class="bottom">
+                            HiddenEurope.eu <br/>
+                            Travel & Lifestyle Blog
+                        </div>
                     </div>
-                </div>
-                <div class="container">
-                    <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
-                    <div class="bottom">
-                        KashmirStyle.in <br/>
-                        Fashion eCommerce Website
+                    <div class="container">
+                        <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
+                        <div class="bottom">
+                            KashmirStyle.in <br/>
+                            Fashion eCommerce Website
+                        </div>
                     </div>
-                </div>
-                <div class="container">
-                    <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
-                    <div class="bottom">
-                        Gourma.nd <br/>
-                        Ready-To-Cook Gourmet Meals Website
+                    <div class="container">
+                        <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
+                        <div class="bottom">
+                            Gourma.nd <br/>
+                            Ready-To-Cook Meals Website
+                        </div>
                     </div>
                 </div>
             </div>
