updated responsive styling

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Works</h2>
             </div>
             <div>
-                <div class="feature_div feature_container">
+                <div class="feature feature_container">
                     <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddybig.png" alt="Clickable image of RunBuddy website."></a>
                     <div class="feature_bottom">
                         RunBuddy<br />
@@ -80,7 +80,7 @@
                         <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
                         <div class="bottom">
                             Gourma.nd <br/>
-                            Ready-To-Cook Meals Website
+                            Ready-To-Cook Gourmet Meals Website
                         </div>
                     </div>
                 </div>
