updated under 400 styles

--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
             <h2>Contact Me</h2>
             <div class="contacts">
                 <div>
-                    <a href="" class="phone">614.579.0977</a>
+                    <a href="tel:614-579-0977">614.579.0977</a>
                 </div>
                 <div>
-                    <a href="mailto:alan@akme.us" class="email">alan@akme.us</a>
+                    <a href="mailto:alan@akme.us">alan@akme.us</a>
                 </div>
                 <div>
-                    <a href="https://github.com/sakme" target="_blank" class="github">GitHub</a>
+                    <a href="https://github.com/sakme" target="_blank">GitHub</a>
                 </div>
                 <div>
-                    <a href="https://www.linkedin.com/in/alan-rabideau-4539255" target="_blank" class="linkedin">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/alan-rabideau-4539255" target="_blank">LinkedIn</a>
                 </div>
             </div>
         </section>
