--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </div>
             <div>
                 <div class="feature feature_container">
-                    <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddybig.png" alt="Clickable image of RunBuddy website."></a>
+                    <a href="https://sakme.github.io/ready-to-eat/" target="_blank"><img src="./assets/images/ready-to-eat.png" alt="Clickable image of Ready To Eat website."></a>
                     <div class="feature_bottom">
-                        RunBuddy<br />
-                        Fitness Company Website
+                        Ready To Eat<br />
+                        Recipe Website
                     </div>
                 </div>
                 <div class="main_div">
@@ -70,17 +70,17 @@
                         </div>
                     </div>
                     <div class="container">
+                        <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
+                        <div class="bottom">
+                            Run Buddy <br/>
+                            Fitness Company Website
+                        </div>
+                    </div>
+                    <div class="container">
                         <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
                         <div class="bottom">
                             KashmirStyle.in <br/>
                             Fashion eCommerce Website
-                        </div>
-                    </div>
-                    <div class="container">
-                        <a href="#" target="_blank"><img src="./assets/images/gourmand_small.png" alt="Clickable link of gourma.nd website"></a>
-                        <div class="bottom">
-                            Gourma.nd <br/>
-                            Ready-To-Cook Gourmet Meals Website
                         </div>
                     </div>
                 </div>
