--- a/index.html
+++ b/index.html
@@ -2,119 +2,127 @@
 
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/css/styles.css">
-        <title>Alan Rabideau Work Portfolio</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <title>Alan Rabideau Work Portfolio</title>
+</head>
 
-    <body>
-        <!-- begin header -->
-        <header>
-            <h1>Alan Rabideau</h1>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#work">Works</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact Me</a>
-                    </li>
-                    <li>
-                        <a href="./resume.html" target="_blank">Resume</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <!-- end header -->
+<body>
+    <!-- begin header -->
+    <header>
+        <h1>Alan Rabideau</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Works</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact Me</a>
+                </li>
+                <li>
+                    <a href="./resume.html" target="_blank">Resume</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <!-- end header -->
 
-        <!-- begin about section -->
-        <section id="about" class="about">
+    <!-- begin about section -->
+    <section id="about" class="about">
+        <div>
+            <h2>About Me</h2>
+        </div>
+        <div class="about-image">
             <div>
-                <h2>About Me</h2>
+                <img src="./assets/images/headshot.png" alt="Photo of Alan Rabideau in suit outdoors.">
             </div>
-            <div class="about-image">
-                <div>
-                    <img src="./assets/images/headshot.png" alt="Photo of Alan Rabideau in suit outdoors.">
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, autem odit? Assumenda aperiam
+                    quisquam esse doloremque obcaecati. Et, quaerat. Quod, deserunt repellat. Amet sequi a totam aliquam
+                    porro doloremque veritatis!</p>
+            </div>
+        </div>
+    </section>
+    <!-- end about section -->
+
+    <!-- begin work section -->
+    <section id="work" class="work">
+        <div>
+            <h2>Works</h2>
+        </div>
+        <div>
+            <div class="feature feature_container">
+                <a href="https://shielded-hollows-44120.herokuapp.com//" target="_blank"><img
+                        src="./assets/images/simple_lead_manager.png"
+                        alt="Clickable image of Simple Lead Manager website."></a>
+                <div class="feature_bottom">
+                    Simple Lead Manager<br />
+                    Lead Management Website
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore, autem odit? Assumenda aperiam quisquam esse doloremque obcaecati. Et, quaerat. Quod, deserunt repellat. Amet sequi a totam aliquam porro doloremque veritatis!</p>
-                </div>
             </div>
-        </section>
-        <!-- end about section -->
-
-        <!-- begin work section -->
-        <section id="work" class="work">
-            <div>
-                <h2>Works</h2>
-            </div>
-            <div>
-                <div class="feature feature_container">
-                    <a href="https://sakme.github.io/ready-to-eat/" target="_blank"><img src="./assets/images/ready-to-eat.png" alt="Clickable image of Ready To Eat website."></a>
-                    <div class="feature_bottom">
+            <div class="main_div">
+                <div class="container">
+                    <a href="https://sakme.github.io/ready-to-eat/" target="_blank"><img
+                            src="./assets/images/ready-to-eat_small.png"
+                            alt="Clickable image of Ready To Eat website."></a>
+                    <div class="bottom">
                         Ready To Eat<br />
                         Recipe Website
                     </div>
                 </div>
-                <div class="main_div">
-                    <div class="container">
-                        <a href="#" target="_blank"><img src="./assets/images/hidden_eu_small.png" alt="Clickable image of hiddeneurope.eu website"></a>
-                        <div class="bottom">
-                            HiddenEurope.eu <br/>
-                            Travel & Lifestyle Blog
-                        </div>
+                <div class="container">
+                    <a href="https://sakme.github.io/run-buddy/" target="_blank"><img
+                            src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
+                    <div class="bottom">
+                        Run Buddy <br />
+                        Fitness Company Website
                     </div>
-                    <div class="container">
-                        <a href="https://sakme.github.io/run-buddy/" target="_blank"><img src="./assets/images/runbuddy_small.png" alt="Clickable image of RunBuddy website."></a>
-                        <div class="bottom">
-                            Run Buddy <br/>
-                            Fitness Company Website
-                        </div>
-                    </div>
-                    <div class="container">
-                        <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png" alt="Clickable link of kashmirstyle.in website"></a>
-                        <div class="bottom">
-                            KashmirStyle.in <br/>
-                            Fashion eCommerce Website
-                        </div>
+                </div>
+                <div class="container">
+                    <a href="#" target="_blank"><img src="./assets/images/kashmir_small.png"
+                            alt="Clickable link of kashmirstyle.in website"></a>
+                    <div class="bottom">
+                        KashmirStyle.in <br />
+                        Fashion eCommerce Website
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- end work section -->
+        </div>
+    </section>
+    <!-- end work section -->
 
-        <!-- begin contact section -->
-        <section id="contact" class="contact">
-            <h2>Contact Me</h2>
-            <div class="contacts">
-                <div>
-                    <a href="tel:614-579-0977">614.579.0977</a>
-                </div>
-                <div>
-                    <a href="mailto:alan@akme.us">alan@akme.us</a>
-                </div>
-                <div>
-                    <a href="https://github.com/sakme" target="_blank">GitHub</a>
-                </div>
-                <div>
-                    <a href="https://www.linkedin.com/in/alan-rabideau-4539255" target="_blank">LinkedIn</a>
-                </div>
+    <!-- begin contact section -->
+    <section id="contact" class="contact">
+        <h2>Contact Me</h2>
+        <div class="contacts">
+            <div>
+                <a href="tel:614-579-0977">614.579.0977</a>
             </div>
-        </section>
-        <!-- end contact section -->
+            <div>
+                <a href="mailto:alan@akme.us">alan@akme.us</a>
+            </div>
+            <div>
+                <a href="https://github.com/sakme" target="_blank">GitHub</a>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/alan-rabideau-4539255" target="_blank">LinkedIn</a>
+            </div>
+        </div>
+    </section>
+    <!-- end contact section -->
 
-        <!-- begin footer -->
-        <footer>
-            <h2>Created by Alan Rabideau</h2>
-            <p>Columbus, Ohio</p>
-        </footer>
-        <!-- end footer -->
-        
-    </body>
+    <!-- begin footer -->
+    <footer>
+        <h2>Created by Alan Rabideau</h2>
+        <p>Columbus, Ohio</p>
+    </footer>
+    <!-- end footer -->
+
+</body>
 
 </html>
